Bug 449987 - krita suffer a fatal error and doesnt let me use the app anymore
Summary: krita suffer a fatal error and doesnt let me use the app anymore
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: * Unknown (other bugs)
Version First Reported In: 5.0.2
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-02-11 02:56 UTC by Leo
Modified: 2022-08-09 12:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
error message (273.59 KB, image/png)
2022-02-11 02:56 UTC, Leo
Details
attachment-11971-0.html (3.11 KB, text/html)
2022-02-11 22:58 UTC, Leo
Details
Captura de pantalla (207).png (234.57 KB, image/png)
2022-02-11 22:58 UTC, Leo
Details
Captura de pantalla (206).png (234.80 KB, image/png)
2022-02-11 22:58 UTC, Leo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Leo 2022-02-11 02:56:58 UTC
Created attachment 146567 [details]
error message

I was testing the pen pressure on the tablet and the app, and I was also moving where the resources were stored, I passed them to data (they were on windows) I have krita on steam and I was using another steam application (I don't know if this is relevant, the app was dead by daylight), once I finished playing, I wanted to enter the app but an error message appeared, I managed to enter the app using a file I was working on, uninstall the app and reinstall it and when I wanted to enter by both ways I could not. i tried to install krita from the website and the same message appear

STEPS TO REPRODUCE
1. open another steam app
2. open krita (steam version)
3. move the storage and pen pressure
4. close both apps
5. done, the error will appear, now you can only enter the app using an old file
6. uninstall and reinstall krita
7. i can no longer use or enter krita

OBSERVED RESULT
error message

EXPECTED RESULT
be able to still using krita

SOFTWARE/OS VERSIONS
Windows: 5.0.2
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Alvin Wong 2022-02-11 06:55:38 UTC
Hi, other Steam applications probably has nothing to do with this. Reinstalling does not reset the settings of Krita so that wouldn't help. Do you remember where exactly did you move the resources (I assume you changed the resource location)?

Please follow these steps to check the Krita configuration file:

1. Open Notepad
2. Inside Notepad, select "File -> Open" from the menu
3. In the filename, input "%localappdata%\kritarc" (without quotes)
4. Find the two lines starting with "ResourceCacheDbDirectory=" and "ResourceDirectory="
5. Note these two lines and reply to this bug report with them so we can see what was happening.

To fix your Krita configuration, you can just remove these two lines and save the file. This should cause Krita to use the default resource location. (Please close the file before launching Krita.)
Comment 2 Leo 2022-02-11 22:58:29 UTC
Created attachment 146605 [details]
attachment-11971-0.html

Greetings, i put the files like you told me and apparently the program works again, i havent try to use it but it opens normally again.Thank you very much.:)
-------- Mensaje original --------De: Alvin Wong <bugzilla_noreply@kde.org> Fecha: 11/2/2022  12:55 a. m.  (GMT-06:00) A: leonardolara450@gmail.com Asunto: [krita] [Bug 449987] krita suffer a fatal error and doesnt let me use the app anymore https://bugs.kde.org/show_bug.cgi?id=449987Alvin Wong <alvin@alvinhc.com> changed:           What    |Removed                     |Added----------------------------------------------------------------------------                 CC|                            |alvin@alvinhc.com--- Comment #1 from Alvin Wong <alvin@alvinhc.com> ---Hi, other Steam applications probably has nothing to do with this. Reinstallingdoes not reset the settings of Krita so that wouldn't help. Do you rememberwhere exactly did you move the resources (I assume you changed the resourcelocation)?Please follow these steps to check the Krita configuration file:1. Open Notepad2. Inside Notepad, select "File -> Open" from the menu3. In the filename, input "%localappdata%\kritarc" (without quotes)4. Find the two lines starting with "ResourceCacheDbDirectory=" and"ResourceDirectory="5. Note these two lines and reply to this bug report with them so we can seewhat was happening.To fix your Krita configuration, you can just remove these two lines and savethe file. This should cause Krita to use the default resource location. (Pleaseclose the file before launching Krita.)-- You are receiving this mail because:You reported the bug.
Comment 3 Leo 2022-02-11 22:58:30 UTC
Created attachment 146606 [details]
Captura de pantalla (207).png
Comment 4 Leo 2022-02-11 22:58:30 UTC
Created attachment 146607 [details]
Captura de pantalla (206).png
Comment 5 Alvin Wong 2022-02-12 11:11:33 UTC
Hi, glad to see Krita working again for you!

Yeah, setting the resource location to something like the root of the C:\ drive is going to cause some issues. I think we can add some sanity checks and warn the users if they try to do similar things in the future.
Comment 6 Halla Rempt 2022-08-09 12:32:22 UTC
Git commit e13edec3dcd403e6e451978d3e4af999eb614b2e by Halla Rempt.
Committed on 09/08/2022 at 12:31.
Pushed by rempt into branch 'master'.

Add a warning if the resource location is not writable

And we don't save an unwritable location to the settings, and if
on loading the location is unwritable, use the default location.
(This can happen if the location was set to a removable drive,
and the drive was removed.)

M  +5    -0    libs/resources/KoResourcePaths.cpp
M  +1    -1    libs/resourcewidgets/KisResourceThumbnailPainter.cpp
M  +43   -2    libs/ui/dialogs/kis_dlg_preferences.cc
M  +1    -0    libs/ui/dialogs/kis_dlg_preferences.h
M  +19   -6    libs/ui/forms/wdggeneralsettings.ui
M  +5    -0    libs/widgets/kis_file_name_requester.cpp
M  +3    -0    libs/widgets/kis_file_name_requester.h

https://invent.kde.org/graphics/krita/commit/e13edec3dcd403e6e451978d3e4af999eb614b2e