Add a warning if the resource location is not writable

And we don't save an unwritable location to the settings, and if
on loading the location is unwritable, use the default location.
(This can happen if the location was set to a removable drive,
and the drive was removed.)

BUG:449987