libs/ui/dialogs/kis_dlg_preferences.h
@@ -99,6 +99,7 @@ public:
 private Q_SLOTS:
     void getBackgroundImage();
     void clearBackgroundImage();
+    void checkResourcePath();
 
 public:
     QButtonGroup m_pasteFormatGroup;
